--- a/index.html
+++ b/index.html
@@ -37,7 +37,16 @@
                 <a href="https://www.datos.gov.co/Seguridad-y-Defensa/Incautaci-n-estupefacientes-2016/hede-9b26" target="_blank">Incautación estupefacientes 2016</a> disponible en el portal de <a href="https://www.datos.gov.co/" target="_blank">Datos Abiertos de Colombia</a>
                  , proporcionada por el Grupo Información de Criminalidad (GICRI) - DIJIN de la Policía Nacional, con el propósito de entender mejor el estado actual de cómo se distribuyen los estupefacientes a nivel nacional.
             </p>                    
-
+            
+            <div id="button_wrapper">
+                <p> Seleccione el filtro deseado: </p>
+                <button type="button" class="btn" id="button_1">Click Me 1!</button>                
+                <button type="button" class="btn" id="button_2">Click Me 2!</button>
+                <button type="button" class="btn" id="button_3">Click Me 3!</button>
+                <button type="button" class="btn" id="button_4">Click Me 4!</button>
+                <button type="button" class="btn" id="button_5">Click Me 5!</button>
+            </div>
+                        
             <svg id="svg" width="1320" height="900" class="grafica"></svg>
             <script src="resources/js/Force_Directed_Graph_SVG.js"></script> 
 
