Zoom + description + link

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <header>
             </header>
 
-            <h1>Redes Películas</h1>
+            <h1>Películas, directores, actores y sus conexiones</h1>
                         
             <div id="wrapper">
                 <div id="first">
@@ -58,7 +58,7 @@
             <footer>
                 <p><br><br><strong>Estupefacientes, más que cifras</strong> es mantenido por 
                     <a href="https://github.com/jairoruizsaenz" target="_blank">Jairo Ruiz Saenz</a>  -  
-                    <a href="https://github.com/jairoruizsaenz" target="_blank">Ver Repositorio</a> -
+                    <a href="https://github.com/jairoruizsaenz/Relaciones-Peliculas" target="_blank">Ver Repositorio</a> -
                        Fecha de actualización: 18/09/2017 </p>
                 <p>Publicado con <a href="https://pages.github.com" target="_blank">GitHub Pages</a></p>                        
             </footer>
