New movies - DC Comics

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h4> Seleccione el filtro deseado: </h4>
                 <button type="button" class="btn" id="button_1">Universo Marvel</button>                
                 <button type="button" class="btn" id="button_2">Star Wars</button>
+                <button type="button" class="btn" id="button_3">DC Comics</button>
                 <!--
-                <button type="button" class="btn" id="button_3">Click Me 3!</button>
                 <button type="button" class="btn" id="button_4">Click Me 4!</button>
                 <button type="button" class="btn" id="button_5">Click Me 5!</button>                
                 -->
